--- a/create_vms.yml
+++ b/create_vms.yml
@@ -55,7 +55,7 @@
         ssh_password_enabled: false
         ssh_public_keys:
           - path: /home/azureuser/.ssh/authorized_keys
-            key_data: "<key_data>"
+            key_data: "{{ lookup('ansible.builtin.env', 'SSH_PUBLIC_KEY') }}"
         network_interfaces: myNIC
         image:
           offer: CentOS
