--- a/create_vms.yml
+++ b/create_vms.yml
@@ -62,3 +62,19 @@
           publisher: OpenLogic
           sku: '7.5'
           version: latest
+    - name: Create VM 2
+      azure_rm_virtualmachine:
+        resource_group: ansible_managed_resources
+        name: myVM2
+        vm_size: Standard_DS1_v2
+        admin_username: azureuser
+        ssh_password_enabled: false
+        ssh_public_keys:
+          - path: /home/azureuser/.ssh/authorized_keys
+            key_data: "{{ lookup('ansible.builtin.env', 'SSH_PUBLIC_KEY') }}"
+        network_interfaces: myNIC
+        image:
+          offer: CentOS
+          publisher: OpenLogic
+          sku: '7.5'
+          version: latest
